// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text/> as prop has correct html tag for div 1`] = `
.c0 {
  font-family: 'Roboto',sans-serif;
  font-size: 14px;
  margin: 0;
}

<div
  class="c0"
>
  example
</div>
`;

exports[`<Text/> as prop has correct html tag for h1 1`] = `
.c0 {
  font-family: 'Roboto',sans-serif;
  font-size: 14px;
  margin: 0;
}

<h1
  class="c0"
>
  example
</h1>
`;

exports[`<Text/> as prop has correct html tag for h2 1`] = `
.c0 {
  font-family: 'Roboto',sans-serif;
  font-size: 14px;
  margin: 0;
}

<h2
  class="c0"
>
  example
</h2>
`;

exports[`<Text/> as prop has correct html tag for h3 1`] = `
.c0 {
  font-family: 'Roboto',sans-serif;
  font-size: 14px;
  margin: 0;
}

<h3
  class="c0"
>
  example
</h3>
`;

exports[`<Text/> as prop has correct html tag for h4 1`] = `
.c0 {
  font-family: 'Roboto',sans-serif;
  font-size: 14px;
  margin: 0;
}

<h4
  class="c0"
>
  example
</h4>
`;

exports[`<Text/> as prop has correct html tag for h5 1`] = `
.c0 {
  font-family: 'Roboto',sans-serif;
  font-size: 14px;
  margin: 0;
}

<h5
  class="c0"
>
  example
</h5>
`;

exports[`<Text/> as prop has correct html tag for h6 1`] = `
.c0 {
  font-family: 'Roboto',sans-serif;
  font-size: 14px;
  margin: 0;
}

<h6
  class="c0"
>
  example
</h6>
`;

exports[`<Text/> as prop has correct html tag for p 1`] = `
.c0 {
  font-family: 'Roboto',sans-serif;
  font-size: 14px;
  margin: 0;
}

<p
  class="c0"
>
  example
</p>
`;

exports[`<Text/> has correct default html tag and css properties 1`] = `
.c0 {
  font-family: 'Roboto',sans-serif;
  font-size: 14px;
  margin: 0;
}

<div
  class="c0"
>
  example
</div>
`;

exports[`<Text/> margin prop has correct CSS properties when set 1`] = `
.c0 {
  font-family: 'Roboto',sans-serif;
  font-size: 14px;
  margin: 1 1 1 1;
}

<div
  class="c0"
>
  example
</div>
`;

exports[`<Text/> styleOf prop has correct CSS properties for body 1`] = `
.c0 {
  font-family: 'Roboto',sans-serif;
  font-size: 14px;
  margin: 0;
}

<div
  class="c0"
>
  example
</div>
`;

exports[`<Text/> styleOf prop has correct CSS properties for title1 1`] = `
.c0 {
  font-family: 'Roboto',sans-serif;
  font-size: 64px;
  margin: 0;
}

<div
  class="c0"
>
  example
</div>
`;

exports[`<Text/> styleOf prop has correct CSS properties for title2 1`] = `
.c0 {
  font-family: 'Roboto',sans-serif;
  font-size: 32px;
  margin: 0;
}

<div
  class="c0"
>
  example
</div>
`;

exports[`<Text/> styleOf prop has correct CSS properties for title3 1`] = `
.c0 {
  font-family: 'Roboto',sans-serif;
  font-size: 28px;
  margin: 0;
}

<div
  class="c0"
>
  example
</div>
`;

exports[`<Text/> styleOf prop has correct CSS properties for title4 1`] = `
.c0 {
  font-family: 'Roboto',sans-serif;
  font-size: 24px;
  margin: 0;
}

<div
  class="c0"
>
  example
</div>
`;

exports[`<Text/> styleOf prop has correct CSS properties for title5 1`] = `
.c0 {
  font-family: 'Roboto',sans-serif;
  font-size: 20px;
  margin: 0;
}

<div
  class="c0"
>
  example
</div>
`;

exports[`<Text/> styleOf prop has correct CSS properties for title6 1`] = `
.c0 {
  font-family: 'Roboto',sans-serif;
  font-size: 16px;
  margin: 0;
}

<div
  class="c0"
>
  example
</div>
`;

exports[`<Text/> textAlign prop has correct CSS properties for center 1`] = `
.c0 {
  font-family: 'Roboto',sans-serif;
  font-size: 14px;
  margin: 0;
  text-align: center;
}

<div
  class="c0"
>
  example
</div>
`;

exports[`<Text/> textAlign prop has correct CSS properties for left 1`] = `
.c0 {
  font-family: 'Roboto',sans-serif;
  font-size: 14px;
  margin: 0;
  text-align: left;
}

<div
  class="c0"
>
  example
</div>
`;

exports[`<Text/> textAlign prop has correct CSS properties for right 1`] = `
.c0 {
  font-family: 'Roboto',sans-serif;
  font-size: 14px;
  margin: 0;
  text-align: right;
}

<div
  class="c0"
>
  example
</div>
`;
